Letter spacing fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -318,6 +318,7 @@ header {
     border-radius: 300px;
     font-weight: 700;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .btn-xl {
